# AngelCore

./: CMakeLists.txt
AngelScript/: ASDB2Schema.cpp  ASDB2Schema.h  ASDB2Storage.cpp  ASDB2Storage.h  ASGenericDB2Loader.cpp  ASGenericDB2Loader.h  ASHookTypes.h  ASPacketData.cpp  ASPacketData.h  ASScriptAttributes.h  ASSharedData.cpp  ASSharedData.h  AngelScriptMgr.cpp  AngelScriptMgr.h  CMakeLists.txt
AngelScript/API/: ASCreatureAPI.cpp  ASCreatureAPI.h  ASDB2API.cpp  ASDB2API.h  ASDatabaseAPI.cpp  ASDatabaseAPI.h  ASGameObjectAPI.cpp  ASGameObjectAPI.h  ASGlobalFunctions.cpp  ASGlobalFunctions.h  ASGossipAPI.cpp  ASGossipAPI.h  ASPacketAPI.cpp  ASPacketAPI.h  ASPlayerAPI.cpp  ASPlayerAPI.h  ASSpellAPI.cpp  ASSpellAPI.h  ASUnitAPI.cpp  ASUnitAPI.h  ASUpdateFieldAPI.cpp  ASUpdateFieldAPI.h  ASWorldAPI.cpp  ASWorldAPI.h
AngelScript/Dispatch/: ASDispatch.cpp  ASDispatch.h
AngelScript/Hooks/: ASBattlegroundHooks.cpp  ASBattlegroundHooks.h  ASCraftingHooks.cpp  ASCraftingHooks.h  ASCreatureHooks.cpp  ASCreatureHooks.h  ASGameObjectHooks.cpp  ASGameObjectHooks.h  ASHookInterception.cpp  ASHookInterception.h  ASInstanceHooks.cpp  ASInstanceHooks.h  ASMapHooks.cpp  ASMapHooks.h  ASPacketHooks.cpp  ASPacketHooks.h  ASPlayerHooks.cpp  ASPlayerHooks.h  ASQuestHooks.cpp  ASQuestHooks.h  ASSpellHooks.cpp  ASSpellHooks.h  ASSpellScriptClass.cpp  ASSpellScriptClass.h  ASWorldHooks.cpp  ASWorldHooks.h
AngelScript/SDK/: CMakeLists.txt
AngelScript/angelscripts/: Common.as  README.md  ScriptFramework.as  login_announcer.as
AngelScript/angelscripts/examples/: db2_data_example.as  dynamic_db2_loading_example.as  simple_battleground_example.as  simple_instance_example.as  simple_spell_example.as
cmake/: options.cmake  showoptions.cmake
sql/custom/auth/: 2026_04_18_00_auth_rbac_angelscript.sql
sql/custom/world/: 2026_04_18_00_world_command_reload_angelscript.sql
src/server/game/: CMakeLists.txt
src/server/game/Accounts/: RBAC.h
src/server/game/DungeonFinding/: LFGMgr.cpp
src/server/game/Entities/Player/: Player.cpp
src/server/game/Handlers/: CharacterHandler.cpp  ChatHandler.cpp
src/server/game/Scripting/: ScriptMgr.cpp
src/server/game/Server/: WorldSession.cpp
src/server/game/Spells/: Spell.cpp
src/server/game/Transmog/: TransmogMgr.cpp
src/server/game/World/: World.cpp
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_reload.cpp
